Remove Boxing Hours and FAQ

--- a/index-FR.html
+++ b/index-FR.html
@@ -21,7 +21,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 		<li class="h4"><a href="#marketplace">Place de marché</a> <i class="alti-icon alti-icon-marketplace"></i></li>
 		<li class="h4 d-md-none"><a href="#faq">FAQ</a></li>
 		<li class="h4"><a href="#contact">Nous contacter</a></li>
-		<li class="h4" style="border-top: 1px #000 solid; margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">FAQ Soldes d'après Noël</a></li>
 	</ul>
 	<h2 class="d-none d-md-block faq-menu">FAQ</h2>
 	<ul class="top-questions list-unstyled d-none d-md-block">
@@ -865,8 +864,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<div class="card-body">
 					<p>Pour faire une demande de clavardage avec nous, vous pouvez simplement cliquer sur l’icône dans le coin droit au bas de votre écran:</p>
 					<p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-FR.png" /></p>
-					<p>À l'occasion des soldes d’après Noël, nos conseillers seront disponibles:<br /><br /> Lundi 24 décembre: <span class="text-nowrap">9h - 15h HE</span><br /> Mardi 25 décembre: <span class="text-nowrap">12h - 17h HE</span><br /> Du 26 au 30 décembre: <span class="text-nowrap">8h30 - 00h30 HE</span><br /> Lundi 31 décembre: <span class="text-nowrap">9h - 15h HE</span><br /> Mardi 1er janvier: <span class="text-nowrap">12h - 17h HE</span><br /> Du 2 au 4 janvier: <span class="text-nowrap">8h30 - 00h30 HE</span></p>
-					<p>Le retour aux heures régulières se fera dès le 5 janvier.</p>
 					<p>Des conseillers au service à la clientèle sont disponibles pour le clavardage du lundi au vendredi, de 9 h à 22 h, samedi, de 10 h à 18 h et dimanche, de 12 h à 22 h HE.</p>
 					<p><em>* Veuillez noter que l'icône changera à « Aide » si notre service de clavardage n'est pas disponible. Cliquez sur celui-ci et utiliser le formulaire pour nous envoyer une demande.</em></p>
 				</div>
@@ -877,8 +874,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body">
 					<p>De la région de Montréal : 514 495-1111 <br />D'ailleurs en Amérique du Nord : 1 855 585-6266 <br />De l'extérieur de l'Amérique du Nord : 1 514 495-1111</p>
-					<p>À l'occasion des soldes d’après Noël, nos conseillers seront disponibles:<br /><br /> Lundi 24 décembre: <span class="text-nowrap">9h - 15h HE</span><br /> Mardi 25 décembre: <span class="text-nowrap">12h - 17h HE</span><br /> Du 26 au 30 décembre: <span class="text-nowrap">8h30 - 00h30 HE</span><br /> Lundi 31 décembre: <span class="text-nowrap">9h - 15h HE</span><br /> Mardi 1er janvier: <span class="text-nowrap">12h - 17h HE</span><br /> Du 2 au 4 janvier: <span class="text-nowrap">8h30 - 00h30 HE</span></p>
-					<p>Le retour aux heures régulières se fera dès le 5 janvier.</p>
 					<p>Des conseillers au service à la clientèle prennent les appels du lundi au vendredi, de 9 h à 22 h, le samedi de 10 h à 18 h et le dimanche de 12 h à 22 h.</p>
 					<p>Prendre note que nos heures d’opérations sont basées sur l’heure de l’Est.</p>
 					<p>Altitude Sports s'engage à vous rappeler dans un délai de 1 à 2 jours ouvrables maximum si vous laissez un message sur la boîte vocale.</p>
@@ -916,126 +911,5 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			</div>
 		</div>
 	</div>
-	<!-- END Contact --> <!-- Boxing Day -->
-	<div class="content" id="boxingday">
-		<h1>FAQ Soldes d'après Noël</h1>
-		<p>Si vous êtes familier avec les soldes d’après Noël, vous êtes probablement déjà occupé à consulter les sites de vos magasins favoris et à mettre des signets aux rabais que vous ne voulez pas manquer.</p>
-		<p>Dans le but d’améliorer votre expérience de magasinage durant les soldes d’après Noël, nous avons rassemblé une liste des questions les plus posées par nos clients au cours des dernières années. Nous espérons que vous y trouverez réponse à toutes vos interrogations. Il ne vous restera plus qu’à encercler les dates sur votre calendrier et à programmer une alarme pour ne rien manquer <a href="/pages/boxing-day">des rabais</a>.</p>
-		<div id="accordionBoxingday" class="accordion">
-			<div class="card">
-				<div class="card-header">
-					<h2>Quand commencent les soldes d’après Noël?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-start-date">
-					<p>Les soldes d’après Noël débutent le 25 décembre et se poursuivent jusqu’au <span class="text-nowrap">1er janvier</span>. Des <a href="/pages/boxing-day">rabais spéciaux</a> seront toutefois affichés sur Altitude-sports.com dès le <span class="text-nowrap">19 décembre</span> au cours de nos soldes d’avant Noël.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Qu’arrive-t-il si j’achète un produit et que son prix baisse quelques jours après?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-price-drops">
-					<p>Chez Altitude Sports, notre politique d’égalisation de prix garantit le prix de votre achat jusqu’à 15 jours. Si vous avez acheté un produit aujourd’hui et que son prix descend d’ici les soldes d’après Noël, sur altitude-sports.com ou chez l’un de nos compétiteurs, nous égalerons le prix le plus bas en vous créditant le montant équivalent à la différence. Consultez notre <a href="#price">politique de prix</a> pour tous les détails.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Comment dois-je procéder pour demander un ajustement de prix?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-request-price-drops">
-					<p>Veuillez suivre la procédure d’égalisation de prix en cliquant sur le bouton ci-dessous.</p>
-					<a href="https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" target="_https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Demandez une égalisation de prix</a>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Quelles seront les marques en rabais?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-discounted-brands">
-					<p>Les soldes d’après Noël sont l’occasion de trouver des aubaines sur des marques rarement en rabais telles que <a href="/collections/arcteryx">Arc’teryx</a>, <a href="/collections/the-north-face">The North Face</a>, <a href="/collections/quartz-co">Quartz Co.</a>, <a href="/collections/icebreaker">Icebreaker</a>, <a href="/collections/soia-kyo">SOIA &amp; KYO</a>, <a href="/collections/sorel">Sorel</a>, <a href="/collections/fjallraven">Fjällräven</a> et <a href="/pages/boxing-day">plusieurs autres</a>. En tout, plus de 300 marques seront mises à rabais durant les soldes d’après Noël. Certaines marques ne seront peut-être pas réduites au début des soldes, mais elles pourraient être mises à rabais plus tard dans la semaine. Consultez <a href="/pages/boxing-day">notre calendrier des rabais</a> des soldes d’après Noël pour connaître le jour auquel votre marque favorite sera en solde. Vous pouvez également vous inscrire à notre infolettre pour recevoir des mises à jour concernant les aubaines et les promotions en cours. De façon générale, les marques qui ne sont pas soldées le 26 décembre demeurent vendues à plein prix durant toute l’année.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>S’agit-il de ventes finales?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-sale-finals">
-					<p>Non, vous bénéficiez de la <a href="#returns_3">politique de retour de 90 jours</a> habituelle. Nous vous encourageons à acheter un même produit en plusieurs tailles pour l’essayer si vous n’êtes pas certain de votre grandeur puisque les stocks seront limités après les soldes d’après Noël. Nous <a href="#returns">retourner un produit</a> est simple, facile et gratuit pour les <a href="/products/membership">membres à vie Altitude Sports</a> et les clients qui placent une première commande.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Que faire si les produits que j’ai achetés ne me font pas?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-return-fit">
-					<p>Ne vous inquiétez pas, tel que mentionné ci-haut, vous bénéficiez de la <a href="#returns_3">politique de retour de 90 jours</a> pour les produits vendus durant les soldes d’après Noël. Pour nous retourner un produit, suivez simplement les étapes indiquées dans la politique. Assurez-vous de nous retourner les produits en parfaite condition, avec les étiquettes et tout l’emballage d’origine (ex: boîte à chaussure, cintres, etc.) Les remboursements sont généralement effectués dans un délai de 5 jours ouvrables, une fois que nous avons reçu le produit.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Comment obtenir le meilleur rabais possible?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-bigger-discount">
-					<p>Nous vous recommandons de suivre les étapes suivantes:</p>
-					<p><strong>1.</strong> <a href="/pages/subscription-abonnement">Inscrivez-vous à notre infolettre</a> pour recevoir des codes rabais exclusifs et être le premier informé des aubaines à venir.</p>
-					<p><strong>2.</strong> Devenez membre à vie Altitude Sports pour obtenir un rabais additionnel de 5% sur les marques sélectionnées. Pour devenir membre à vie, <a href="/products/membership">achetez simplement notre membership</a> au coût de 9.99$ (prix régulier 24.99$). Vous n’avez qu’un seul paiement à faire, le montant du membership sera ajouté à votre première commande et le rabais s’appliquera à tous vos futurs achats sur Altitude Sports. Vous pouvez vous procurer votre membership en même temps que d’autres produits pour bénéficier instantanément du rabais.</p>
-					<p><i>Veuillez noter le rabais Membre et les retours gratuits ne s’appliquent pas aux produits achetés de la <a href="#marketplace">Place de marché</a>.</i></p>
-					<p><strong>3.</strong> Consultez <a href="/pages/coupons-discount-codes-rabais">la page rabais et coupon</a> pour trouver des codes rabais qui pourraient s’appliquer aux produits que vous désirez acheter.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Dois-je m’attendre à des délais plus longs avant de recevoir ma commande compte tenu que plus de gens magasinent sur Altitude Sports au même moment?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-delivery-later">
-					<p>Chez Altitude Sports, nous sommes fiers de livrer aussi rapidement pendant les périodes de pointe que pendant le reste de l’année. C’est, entre autres choses, ce qui nous différencie de la compétition. Cependant, à l’occasion des soldes d’après Noël, les compagnies de livraison ont un volume plus élevé de colis à livrer ce qui peut entraîner du retard dans la livraison des commandes. Les retards causés par la compagnie de transport sont entièrement hors de notre contrôle. Les délais de livraison indiqués sur Altitude-Sports.com et <a href="https://www.ladernierechasse.com/" target="_blank" rel="noopener noreferrer">Ladernièrechasse.com</a> constituent des indicateurs fiables de la date à laquelle vous recevrez votre commande.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Est-ce que Postes Canada est une option de livraison fiable pour l’envoi de ma commande?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-canada-post-delivery">
-					<p>Oui. Les retards occasionnés par les grèves tournantes de Postes Canada sont désormais de moins en moins nombreux. Nous vous recommandons fortement de choisir Postes Canada comme méthode de livraison gratuite étant donné leurs points de cueillette nombreux et accessibles, contrairement aux autres compagnies de livraison. Le processus de retour est également plus simple avec Postes Canada.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Les rabais sont-ils réels ou augmentez-vous le PDSF pour donner l’impression que les rabais sont plus importants qu’ils ne le sont réellement?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-real-discounts">
-					<p>Nos rabais sont bien réels. Nos prix réguliers sont établis en fonction du prix de détail suggéré par le fabricant (PDSF), ils demeurent les mêmes toute l’année, mais peuvent varier en fonction des rabais en cours. Chez Altitude Sports, nous n’achetons pas non plus de modèles de manteaux ou de collections de vêtements uniquement destinés à être vendus lors des Soldes d’après Noël. Les produits que nous vendons lors des soldes sont les mêmes que vendus toute l’année.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Sur quel autre site puis-je trouver les meilleurs rabais à l’occasion des soldes d’après Noël?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-the-last-hunt">
-					<p><a href="https://www.ladernierechasse.com/" target="_blank" rel="noopener noreferrer">La Dernière Chasse</a>, qui offre déjà les meilleurs prix sur des produits des meilleures marques des collections des saisons passées, bonifie ses rabais durant les soldes d’après Noël. Sur <a href="https://www.ladernierechasse.com/" target="_blank" rel="noopener noreferrer">Ladernièrechasse.com</a>, toutes les ventes sont finales et notre politique d’égalisation des prix ne s’applique pas. Si vous trouvez un produit que vous aimez, nous vous recommandons de vous le procurer pendant qu’il est toujours disponible. N’attendez pas trop longtemps, les produits s’envolent rapidement. Gardez en tête que les tailles et les couleurs sont limitées sur <a href="https://www.ladernierechasse.com/" target="_blank" rel="noopener noreferrer">Ladernièrechasse.com</a> puisque les collections proviennent des saisons passées.</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Que faire si j’ai encore des questions après avoir lu la description d’un produit?</h2>
-				</div>
-				<div class="card-body" id="boxing-day-contact-us">
-					<p>Chez Altitude Sports, nous avons une équipe du <a href="#contact">service à la clientèle dévouée</a>, disponible pour répondre à vos questions tous les jours de la semaine. Nous souhaitons vous offrir la meilleure expérience de magasinage possible alors n’hésitez pas à contacter nos agents du service à la clientèle par clavardage, par téléphone ou par courriel.</p>
-					<p><strong>Courriel:</strong> info@altitude-sports.com<br /> <strong>Téléphone: La région de Montréal:</strong> 514-495-1111<br /> <strong>Téléphone: Amérique du Nord:</strong> 1-800-729-0322<br /> <strong>Téléphone: À l’extérieur de l’Amérique du Nord:</strong> 1-514-495-1111</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
-					<h2>Heures du service à la clientèle pour les soldes d’après Noël</h2>
-				</div>
-				<div class="card-body" id="boxing-day-customer-service-hours">
-					<p>À l'occasion des soldes d’après Noël, nos conseillers seront disponibles:</p>
-					<p style="line-height: 1.75em; padding-left: 1em;">Lundi <span class="text-nowrap">24 décembre:</span> <span class="text-nowrap">9h - 15h HE</span><br /> Mardi <span class="text-nowrap">25 décembre:</span> <span class="text-nowrap">12h - 17h HE</span><br /> Du 26 au <span class="text-nowrap">30 décembre:</span> <span class="text-nowrap">8h30 - 00h30 HE</span><br /> Lundi <span class="text-nowrap">31 décembre:</span> <span class="text-nowrap">9h - 15h HE</span><br /> Mardi <span class="text-nowrap">1er janvier:</span> <span class="text-nowrap">12h - 17h HE</span><br /> Du 2 au <span class="text-nowrap">4 janvier:</span> <span class="text-nowrap">8h30 - 00h30 HE </span></p>
-					<p>Le retour aux heures régulières se fera dès <span class="text-nowrap">le 5 janvier.</span></p>
-					<p> </p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- END Boxing Day -->
+	<!-- END Contact -->
 </div>
