Update content for Free Return Marketplace

--- a/index-EN.html
+++ b/index-EN.html
@@ -236,21 +236,20 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<div class="col-12 mt-2 pt-3 px-3">
 						<h2 class="h1"><strong>Fast &amp; Simple Returns</strong></h2>
 						<span class="h3">Including discounted items</span>
-						<p class="description">To save you time, we allow you to try different product sizes or colors at home and return them within 90-days. We've included a prefilled return shipping label inside your package, so you don't have to print or fill-out a form. Just re-pack any unwanted product, stick the return label on your package and take it to your local Canada Post office.</p>
+						<p class="description">To save you time, we allow you to try different product sizes or colours at home and return them within 90 days. We've included a prefilled return shipping label inside your package, so you don't have to print or fill out a form. Just re-pack any unwanted product, stick the return label on your package and take it to your local Canada Post office.</p>
 					</div>
 				</div>
 				<!-- RETURN STEPS -->
 				<div class="row mx-0 easy-return">
-					<div class="col-12 col-lg-4 py-2"><img class="d-inline-block align-middle" src="https://cdn.shopify.com/s/files/1/1230/9376/files/easy-return-1.png" width="100px" height="100px" /> <span class="h4 d-inline-block align-middle pl-2">90-day returns</span></div>
+					<div class="col-12 col-lg-4 py-2"><img class="d-inline-block align-middle" src="https://cdn.shopify.com/s/files/1/1230/9376/files/easy-return-1.png" width="100px" height="100px" /> <span class="h4 d-inline-block align-middle pl-2">90 day returns</span></div>
 					<div class="col-12 col-lg-4 py-2"><img class="d-inline-block align-middle" src="https://cdn.shopify.com/s/files/1/1230/9376/files/easy-return-2.png" width="100px" height="100px" /> <span class="h4 d-inline-block align-middle pl-2">Return label in package</span></div>
 					<div class="col-12 col-lg-4 py-2"><img class="d-inline-block align-middle" src="https://cdn.shopify.com/s/files/1/1230/9376/files/easy-return-2.png" width="100px" height="100px" /> <span class="h4 d-inline-block align-middle pl-2">Take it to your local Canada Post office</span></div>
 				</div>
 				<div class="row mx-0 easy-return">
 					<div class="col-12 p-3">
 						<!--<p class="h5">We’ll deduct $13 +taxes to cover shipping, or you can <a href="/products/membership">become a lifetime member</a> and get free returns forever (with exceptions to product sold by Marketplace sellers).</p>-->
-						<p>We’ll deduct $13 +taxes to cover shipping. You can <a href="/products/membership">become a lifetime member</a> and get free returns forever*</p>
-						<p><a href="#first-time">First-time customer? Receive a free return with your first order*.</a></p>
-						<p><i>* with exceptions to product sold by <a href="#marketplace">Marketplace</a> sellers.</i></p>
+						<p>We’ll deduct $13 + taxes to cover shipping. You can <a href="/products/membership">become a lifetime member</a> and get free returns forever.</p>
+						<p><a href="#first-time">First-time customer? Receive a free return with your first order.</a></p>
 					</div>
 				</div>
 			</div>
@@ -287,7 +286,8 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>First-time customer? Receive a free return with your first order</h2>
 				</div>
 				<div class="card-body" id="first-time">
-					<p>To eliminate all barriers from ordering online, we want to offer you a free return with your first order. Order any product, in the sizes/colours you want to try, and send back free of charge anything you don't want to keep. Applies to orders delivered in Canada. Does not apply on product sold by Marketplace sellers. One prepaid shipping label provided.</p>
+					<p>Get a free return on your first order. Try multiple styles, colours, and sizes; send back what doesn't fit free of charge.</p>
+					<p>Prepaid shipping label provided. Applies to orders in Canada.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -383,7 +383,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Mail returns without our prefilled return label</h2>
 				</div>
 				<div class="card-body">
-					<p>If you choose not to use the prefilled return label supplied in your shipping package, you can return your package using a courier of your choice. Note that Altitude Sports only accepts returns by couriers, such as Canada Post, FedEx, and UPS.</p>
+					<p>If you choose not to use the prefilled return label supplied in your shipping package, you can return your package using a courier of your choice. Note that Altitude Sports only accepts returns by authorized couriers such as Canada Post, FedEx, and UPS.</p>
 					<p>All product orders you wish to return must be shipped to our warehouse. For logistical reasons, our warehouse is not open to the public.</p>
 					<strong>Return address: </strong>
 					<p>Altitude Sports <br />Department of returns <br />333 Chabanel St. West, suite 705 <br />Montreal (Quebec) H2N 2E7 <br />Canada</p>
@@ -404,7 +404,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>International Returns, including the United States</h2>
 				</div>
 				<div class="card-body" id="international-usa-returns">
-					<p>The 13$ return fee and member’s free returns apply only to orders delivered in Canada. If you wish to return an item and you are located in the United States, or outside Canada, <a href="#contact">please contact Altitude Sports Customer Service</a>. One of the agents will be glad to help guide you through the return process and will be able to estimate the accompanying fees.</p>
+					<p>The $13 return fee and free returns for members only apply to orders delivered in Canada. If you wish to return an item and you are located in the United States, or outside Canada, please contact <a href="#contact">Altitude Sports Customer Service</a>. One of our agents will be glad to help guide you through the return process and estimate the accompanying fees. </p>
 				</div>
 			</div>
 			<div class="card">
@@ -417,8 +417,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 						<li>If your product was sold and shipped by Altitude Sports, the product must be sent back to Altitude Sports.</li>
 						<li>If your product was sold and shipped by a Marketplace seller, the product must be sent back to that seller.</li>
 					</ul>
-					<p>Take the package to your local Canada Post, or the courier chosen that delivered your order.</p>
-					<p>Note that the 13$ return fee is applicable to all Marketplace orders.</p>
+					<p>Take the package to your local Canada Post, or the chosen courier that delivered your order. Returns for Marketplace products are free of charge.</p>
 				</div>
 			</div>
 		</div>
@@ -596,7 +595,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>As an Altitude Sports Member, will I still benefit from my discount and free returns when using the Marketplace?</h2>
 				</div>
 				<div class="card-body">
-					<p>The Membership discount and free returns are not applicable on products purchased from a Marketplace seller. Returning product to a Marketplace seller costs $13.</p>
+					<p>The membership discount is not applicable on products purchased from a Marketplace seller. However, returns for products purchased from Marketplace sellers are free. Learn more about returns from Marketplace sellers <a href="#marketplace-return">here</a>.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -604,7 +603,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Is shipping free over $49?</h2>
 				</div>
 				<div class="card-body">
-					<p>Unfortunately Marketplace products are not eligible for free shipping.</p>
+					<p>Unfortunately, Marketplace products are not eligible for free shipping.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -776,12 +775,11 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			<!-- END FAQ orders --> <!-- BEGIN FAQ shipping -->
 			<div class="card">
 				<div class="card-header">
-					<h2>How can I check if my order, which is over 49$, is eligible for free standard shipping within Canada?</h2>
+					<h2>How can I check if my order, which is over $49, is eligible for free standard shipping within Canada?</h2>
 				</div>
 				<div class="card-body">
-					<p>To know if your purchase qualifies for free standard shipping, simply add the item(s) to your shopping cart. While viewing the complete contents of your shopping cart, you may ask for a shipping estimate after you enter your country, province, and postal code by clicking “Get a Quote.” A menu entitled “Choose a shipping option” will appear below, indicating the shipping methods available to you, as well as the delivery dates and respective prices of each method. You will then be able to see if your order qualifies for free standard shipping with FedEx and/or Canada Post.</p>
-					<p>If the standard method of shipping indicates a fee, this is either due to the remoteness of the delivery address, the dimensions of the order, or the exceptional weight of the order. We work hard to minimize these surcharges by negotiating the best possible prices with the courier companies, and by assuming most of the shipping fees for almost all of these situations. Canada is a large country, so we must draw certain lines to render our business viable. We appreciate your understanding.</p>
-					<p>Please note that free returns are not applicable to products ordered from a <a href="#marketplace">Marketplace</a> seller.</p>
+					<p>To know if your order qualifies for free standard shipping, add the item(s) to your shopping cart. Enter your province and postal code then click “Get a Quote.” A menu titled “Choose a shipping option” will appear, indicating the available shipping methods, delivery dates, and pricing. You'll then see if your order qualifies for free standard shipping with FedEx and/or Canada Post.</p>
+					<p>If your order is over $49 and the standard method of shipping indicates a fee, this is due to the remoteness of the delivery address, the dimensions of the order, or the weight of the order. Altitude Sports work hard to minimize these surcharges by negotiating the best pricing with shipping couriers, and by assuming most of the shipping fees. Canada is geographically large, and we must fix a shipping limit to keep our business viable. We appreciate your understanding.</p>
 				</div>
 			</div>
 			<div class="card">
