--- a/index-FR.html
+++ b/index-FR.html
@@ -250,7 +250,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<div class="col-12 p-3">
 						<p>Nous allons déduire 13 $ plus les taxes du montant de votre remboursement pour couvrir les frais de retour. Vous pouvez également <a href="/products/membership">devenir membre à vie</a> afin de bénéficier des retours gratuits*.</p>
 						<p><a href="#first-time">Nouveau client? Profitez du retour gratuit sur votre première commande*</a></p>
-						<p><i>* non applicable pour les articles provenant des vendeurs de la <a href="#marketplace">Place de marché.</a></i></p>
 					</div>
 				</div>
 			</div>
@@ -287,7 +286,8 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Nouveau client? Profitez du retour gratuit sur votre première commande</h2>
 				</div>
 				<div class="card-body" id="first-time">
-					<p>Pour vous simplifier la vie, nous offrons le retour gratuit sur votre toute première commande. Commandez n’importe quel produit, dans les couleurs et grandeurs de votre choix, et retournez à nos frais les articles que vous ne désirez pas conserver. S’applique sur les commandes livrées au Canada seulement. Non applicable pour les articles provenant des vendeurs de la Place de marché. Un seul bordereau de retour fourni.</p>
+					<p>Profitez du retour gratuit sur votre toute première commande. Commandez n’importe quel produit, dans les couleurs et grandeurs de votre choix, et retournez à nos frais ce que vous ne désirez pas conserver.</p>
+					<p>Bordereau de retour fourni. S’applique sur les commandes livrées au Canada seulement.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -383,7 +383,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Retourner un produit sans notre bordereau de retour</h2>
 				</div>
 				<div class="card-body">
-					<p>Si vous décidez de ne pas utiliser le bordereau de retour joint à votre colis, vous pouvez retourner votre commande en rapportant votre colis à un point de service du transporteur de votre choix. Veuillez noter qu’Altitude Sports n’accepte les retours que s’ils proviennent de transporteurs, tels que Poste Canada, FedEx, et UPS.</p>
+					<p>Si vous décidez de ne pas utiliser le bordereau de retour joint à votre colis, vous pouvez retourner votre commande en rapportant votre colis à un point de service du transporteur de votre choix. Veuillez noter qu’Altitude Sports n’accepte les retours que s’ils proviennent de transporteurs autorisés, tels que Poste Canada, FedEx, et UPS.</p>
 					<p>Toutes les commandes que vous souhaitez retourner doivent être envoyées par la poste à notre entrepôt. Pour des raisons de logistiques, notre entrepôt n’est pas ouvert au public.</p>
 					<strong>Adresse de retour : </strong>
 					<p>Altitude Sports <br />Département des retours <br />333, rue Chabanel O, suite 705 <br />Montreal (Québec) H2N 2E7 <br />Canada</p>
@@ -417,7 +417,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 						<li>Si l’article a été vendu et expédié par Altitude Sports, l’article doit être renvoyé à Altitude Sports.</li>
 						<li>Si l’article a été vendu et expédié par un vendeur de la Place de marché, l’article doit être renvoyé au vendeur.</li>
 					</ul>
-					<p>Déposez le colis à votre bureau Poste Canada local, ou à une succursale de la compagnie de livraison qui a été utilisée pour l’envoi de votre colis. Veuillez prendre note qu’un frais de retour de 13$ s’applique à toutes les commandes passées sur la Place de marché.</p>
+					<p>Déposez le colis à votre bureau Poste Canada local, ou à une succursale de la compagnie de livraison qui a livré votre colis. Les retours pour les commandes de la Place de Marché sont gratuits.</p>
 				</div>
 			</div>
 		</div>
@@ -595,7 +595,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>En tant que membre à vie Altitude Sports, puis-je aussi profiter du rabais membre et des retours gratuits en utilisant la Place de marché?</h2>
 				</div>
 				<div class="card-body">
-					<p>Le rabais membre et les retours gratuits ne s’appliquent pas sur les articles achetés auprès d’un vendeur de la Place de marché. Le coût d’un retour à un vendeur de la Place de marché est de 13$.</p>
+					<p>Le rabais membre ne s’applique pas sur les articles achetés auprès d’un vendeur de la Place de marché. Cependant, les retours sont gratuits pour ces commandes. En savoir plus sur <a href="#marketplace-return">les retours des commandes de la Place de Marché</a>.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -778,9 +778,8 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Comment puis-je savoir si ma commande de plus de 49 $ est éligible à la livraison standard gratuite au Canada?</h2>
 				</div>
 				<div class="card-body">
-					<p>Pour valider que votre futur achat se qualifie pour l'envoi gratuit à l'adresse souhaitée, vous n'avez qu'à ajouter le ou les produits souhaités dans votre panier d'achats. À la première étape de votre panier d'achats, vous pouvez obtenir une estimation des frais d'envoi pour l'ensemble des méthodes de livraison disponibles en entrant le pays, la province et le code postal d'envoi. Cliquez ensuite sur « Obtenir une estimation ». En quelques secondes, un menu nommé « Sélectionnez une méthode de livraison » déroulant apparaîtra sous ce bouton avec toutes les options disponibles, leur date d'arrivée et leur coût respectif. Vous pourrez ainsi voir si votre futur achat se qualifie pour la livraison standard gratuite avec FedEx et/ou Postes Canada.</p>
-					<p>Si les méthodes standards présentent certains frais, cela est dû soit à l'adresse de livraison, à la dimension ou au poids exceptionnels de votre commande. Altitude Sports tente de minimiser ces surcharges au maximum en négociant les meilleurs taux avec les compagnies de livraison et en assumant quand même la majorité des frais d'envoi pour ce type de situation. Le Canada étant un pays très vaste, une limite doit toutefois être établie pour que ces activités commerciales demeurent viables à long terme. Nous vous remercions de votre compréhension.</p>
-					<p>Veuillez noter que les retours gratuits ne s’appliquent pas sur les commandes provenant d’un vendeur de la <a href="#marketplace">Place de marché</a>.</p>
+					<p>Afin de savoir si votre futur achat se qualifie pour la livraison gratuite, vous n'avez qu'à ajouter le ou les produits souhaités dans votre panier d'achats. Saisissez ensuite votre province et votre code postal, et cliquez sur « Obtenir une estimation ». Un menu déroulant nommé « Sélectionnez une méthode de livraison » apparaîtra avec toutes les options disponibles, leur date d'arrivée et leur coût respectif. Vous pourrez ainsi voir si votre futur achat se qualifie pour la livraison standard gratuite avec FedEx et/ou Postes Canada.</p>
+					<p>Si votre commande est de plus de 49 $ et que les méthodes standards présentent tout de même des frais, cela est dû soit à l'adresse de livraison, à la dimension ou au poids exceptionnels de votre commande. Altitude Sports tente de réduire ces surcharges au maximum en négociant les meilleurs taux avec les compagnies de livraison et en assumant la majorité des frais d'envoi pour ce type de situation. Le Canada étant un pays très vaste, une limite doit toutefois être établie pour que nos activités commerciales demeurent viables à long terme. Nous vous remercions de votre compréhension.</p>
 				</div>
 			</div>
 			<div class="card">
