test small change

--- a/index-EN.html
+++ b/index-EN.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			</div>
 			<div class="card">
 				<div class="card-header">
-					<h2>Free express shipping on Canada Goose, Arc'teryx, Arc'teryx Veilance &amp; Nobis</h2>
+					<h2>Free express shipping on Canada Goose, Arc'teryx, Arc'teryx Veilance and Nobis</h2>
 				</div>
 				<div class="card-body" id="free-express-shipping-brands">
 					<p>Valid on orders over $49 shipped within Canada. Valid for a limited time only. Surcharges may be applied in cases where box dimension, weight, or remoteness of delivery address are exceptional.</p>
